...
                        focusedContainerColor = colorResource(R.color.tfColor)
                    ),
                    modifier = Modifier
                        .padding(top = 15.dp)
                        .fillMaxWidth(),
                    placeholder = {
                        Text(text = "Почта",
                            color = colorResource(R.color.placeholderColor),
                            fontWeight = FontWeight(400),
                            fontSize = 12.sp,
                            fontFamily = montserratRegular,
                            modifier = Modifier
                                .padding(start = 10.dp)
...
                        focusedContainerColor = colorResource(R.color.tfColor)
                    ),
                    modifier = Modifier
                        .padding(top = 15.dp)
                        .fillMaxWidth(),
                    placeholder = {
                        Text(text = "Пароль",
                            color = colorResource(R.color.placeholderColor),
                            fontWeight = FontWeight(400),
                            fontSize = 12.sp,
                            fontFamily = montserratRegular,
                            modifier = Modifier
                                .padding(start = 10.dp)
...
                        Button(onClick = {
                            if(state.check){
                                if(emailCheck.checkEmail(state.email)){
                                    if(passwordCheck.checkPassword(state.password)){
                                        vm.onEvent(RegistrEvent.Registration)
                                    } else{
                                        vm.onEvent(RegistrEvent.ChangeErrorMessage("Пароль должен содержать не менее 6 символов"))
                                    }
                                } else{
                                    vm.onEvent(RegistrEvent.ChangeErrorMessage("Некорректная почта"))
                                }
                            } else{
                                vm.onEvent(RegistrEvent.ChangeErrorMessage("Примите Политику конфиденциальности"))
                            }
                        },
                            shape = RoundedCornerShape(100.dp),
...
                            Text(text = "Имеете уже аккаунт? ",
                                color = Color.Black,
                                fontSize = 14.sp,
                                fontWeight = FontWeight(400),
                                fontFamily = poppinsFont
                           )
                            Text(text = "Войти",
                                color = colorResource(R.color.clickableText),
                                fontFamily = poppinsFont,
                                fontSize = 14.sp,
                                fontWeight = FontWeight(500),
                                modifier = Modifier
                                    .clickable {
...
