...
                    .padding(top = 40.dp)
                    .fillMaxWidth(),
                horizontalArrangement = Arrangement.SpaceBetween
            ) {
                Column {
                    Text(
                        text = "Добро пожаловать,",
                        color = colorResource(R.color.HomeWelcome),
                        fontFamily = montserratRegular,
                        fontSize = 12.sp,
                        fontWeight = FontWeight(400)
                    )
                    Text(
...
